Update to use Java 10 features